@@ -1,26 +1,47 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>JHappy4AI_eclipseJUnitproject</groupId>
-  <artifactId>JHappy4AI_eclipseJUnitproject</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <resources>
-      <resource>
-        <directory>src</directory>
-        <excludes>
-          <exclude>**/*.java</exclude>
-        </excludes>
-      </resource>
-    </resources>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.13.0</version>
-        <configuration>
-          <release>21</release>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>JHappy4AI</groupId>
+        <artifactId>JHappy4AI.parent</artifactId>
+        <version>1.0.3-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+
+    <artifactId>JHappy4AI_eclipseJUnitproject</artifactId>
+    <packaging>eclipse-test-plugin</packaging> <build>
+        <plugins>
+            <plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>tycho-surefire-plugin</artifactId>
+                <version>${tycho-version}</version>
+           <configuration>
+           <showSuccess>true</showSuccess>
+    <printSummary>true</printSummary>
+    <failIfNoTests>true</failIfNoTests>
+           
+
+    <useUIThread>true</useUIThread>
+    <useUIHarness>true</useUIHarness>
+    <providerHint>junit5</providerHint>
+    <includes>
+            <include>**/*Test.class</include>
+        </includes>
+    <argLine>
+       -Xmx1024m
+        -Dapple.awt.UIElement=true
+        -XstartOnFirstThread
+        --add-modules=ALL-SYSTEM
+        --add-opens=java.base/java.lang=ALL-UNNAMED
+        --add-opens=java.base/java.util=ALL-UNNAMED
+        --add-opens=java.base/java.net=ALL-UNNAMED
+        --add-opens=java.desktop/com.apple.laf=ALL-UNNAMED
+        --add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED
+         </argLine>
+</configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
